// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FigmaEmbedBlock customConfigProps snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <iframe
          allowfullscreen=""
          aria-label="figma design file"
          class="css-6u5w61"
          height="450"
          src="https://www.figma.com/embed?embed_host=component-controls&url=https://www.figma.com/file/vgf0guEmC5IKtjHJKkRVSr/Button?node-id=0%3A1"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FigmaEmbedBlock customIFrameProps snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <iframe
          allowfullscreen=""
          aria-label="figma design file"
          class="css-6u5w61"
          height="300"
          src="https://www.figma.com/embed?embed_host=component-controls&url=https://www.figma.com/file/vgf0guEmC5IKtjHJKkRVSr/Button?node-id=0%3A1"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FigmaEmbedBlock customURLS snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <iframe
          allowfullscreen=""
          aria-label="design document 1"
          class="css-6u5w61"
          height="450"
          src="https://www.figma.com/embed?embed_host=component-controls&url=https://www.figma.com/file/hS1sLjYq49vjnKXhwGgHwg/Navigation-UI-design-components-Community?node-id=1%3A2309"
          width="100%"
        />
        <iframe
          allowfullscreen=""
          aria-label="design document 2"
          class="css-6u5w61"
          height="450"
          src="https://www.figma.com/embed?embed_host=component-controls&url=https://www.figma.com/file/LtgbR2mbVPbQTNDfDQxbKL/Atanas-Stoyanov-s-Team-Colors?node-id=0%3A1"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FigmaEmbedBlock noFullScreen snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <iframe
          aria-label="figma design file"
          class="css-6u5w61"
          height="450"
          src="https://www.figma.com/embed?embed_host=component-controls&url=https://www.figma.com/file/vgf0guEmC5IKtjHJKkRVSr/Button?node-id=0%3A1"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FigmaEmbedBlock overview snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <iframe
          allowfullscreen=""
          aria-label="figma design file"
          class="css-6u5w61"
          height="450"
          src="https://www.figma.com/embed?embed_host=component-controls&url=https://www.figma.com/file/vgf0guEmC5IKtjHJKkRVSr/Button?node-id=0%3A1"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
